--- a/en/more.html
+++ b/en/more.html
@@ -63,24 +63,17 @@
             <h3>Links:</h3>
               <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="../images/blog-icon.png" title="Blog" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="http://jonathan2251.github.io/wr/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My writing" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="../images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a>
+              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="../images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a> <br> <br> <br>
           </div><!--close content_container-->
+        
+          <h3>Resume:</h3>
+            <a href="http://jonathan2251.github.io/wr/briefresume.html"><img style="vertical-align: middle;" src="../images/html-icon-brief.png" title="Brief Resume(html)" width="32" height="32" /> http://jonathan2251.github.io/wr/briefresume.html</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="http://jonathan2251.github.io/wr/briefresume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Mimetypes-application-pdf-icon.png" title="Brief Resume(pdf)" width="32" height="32" /> http://jonathan2251.github.io/wr/briefresume_cschen.pdf</a>&nbsp;&nbsp;&nbsp;&nbsp; <br>
+            <a href="http://jonathan2251.github.io/wr/detailresume.html"><img style="vertical-align: middle;" src="../images/html-icon-detail.png" title="Detail Resume(html)" width="32" height="32" /> http://jonathan2251.github.io/wr/detailresume.html</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="http://jonathan2251.github.io/wr/detailresume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Adobe-PDF-Reader-Book-icon.png" title="Detail Resume(pdf)" width="32" height="32" /> http://jonathan2251.github.io/wr/detailresume_cschen.pdf</a>&nbsp;&nbsp;&nbsp;&nbsp; <br>
 
-          <div class="content_container">
-            <h3>Resume:</h3>
-              <a href="http://jonathan2251.github.io/wr/briefresume.html"><img style="vertical-align: middle;" src="../images/html-icon-brief.png" title="Brief Resume(html)" width="32" height="32" /> http://jonathan2251.github.io/wr/briefresume.html</a>&nbsp;&nbsp;&nbsp;&nbsp; <br>
-              <a href="http://jonathan2251.github.io/wr/detailresume.html"><img style="vertical-align: middle;" src="../images/html-icon-detail.png" title="Detail Resume(html)" width="32" height="32" /> http://jonathan2251.github.io/wr/detailresume.html</a>&nbsp;&nbsp;&nbsp;&nbsp; <br>
-              <a href="http://jonathan2251.github.io/wr/briefresume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Mimetypes-application-pdf-icon.png" title="Brief Resume(pdf)" width="32" height="32" /> http://jonathan2251.github.io/wr/briefresume_cschen.pdf</a>&nbsp;&nbsp;&nbsp;&nbsp; <br>
-              <a href="http://jonathan2251.github.io/wr/detailresume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Adobe-PDF-Reader-Book-icon.png" title="Detail Resume(pdf)" width="32" height="32" /> http://jonathan2251.github.io/wr/detailresume_cschen.pdf</a>&nbsp;&nbsp;&nbsp;&nbsp; <br>
-          </div><!--close content_container-->
-          
 		  </div><!--close content_item-->
 
-      <!--insert 3 space lines before footer-->
-      <div class="content_item">
-        <h2></h2>
-        <p><br><br><br></p>
-		  </div><!--close content_item-->
     </div><!--close content-->
 	</div><!--close site_content-->
 
