--- a/en/index.html
+++ b/en/index.html
@@ -52,7 +52,7 @@
 	  <div id="content">
       <div class="content_item">
 	      <h1>Welcome To My Website</h1> 
-            <p>I am an experienced programmer who live in Taiwan, learning English and working with open source code as my hobby.</p>
+            <p>I am an experienced programmer who live in Taiwan, tennis, biking and movie are my hobby.</p>
           <div class="content_container">       
 		        <h3>My skills/knowledge:</h3>
 		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, Digital TV software, OOP/Design Pattern, OOA/UML tool, Linux device driver, cmake, html/javascript.</p>
@@ -60,7 +60,7 @@
 
           <div class="content_container">       
 		        <h3>My hobbies:</h3>
-		        <p>Computer/English study and writing. Tennis, biking, movie.</p>
+		        <p>Computer/Program study. Tennis, biking, movie.</p>
           </div><!--close content_container-->
 		  </div><!--close content_item-->
     </div><!--close content-->   
