--- a/ch1/index.html
+++ b/ch1/index.html
@@ -52,7 +52,7 @@
 	  <div id="content">
       <div class="content_item">
 	      <h1>歡迎光臨我的網站</h1> 
-            <p>我住台灣，是個有經驗的軟體工程師，學習英文與參與開放原始碼的工作是我的興趣。</p>
+            <p>我住台灣，是個有經驗的軟體工程師，網球、騎腳踏車、看電影是我的興趣。</p>
           <div class="content_container">       
 		        <h3>我的技能︰</h3>
 		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, Digital TV software, OOP/Design Pattern, OOA/UML tool, Linux device driver, cmake, html/javascript.</p>
@@ -60,7 +60,7 @@
 
           <div class="content_container">       
 		        <h3>我的嗜好︰</h3>
-		        <p>電腦與英文的閱讀及寫作。 網球、騎腳踏車、看電影。</p>
+		        <p>電腦與程式。 網球、騎腳踏車、看電影。</p>
           </div><!--close content_container-->
 		  </div><!--close content_item-->
     </div><!--close content-->   
