--- a/ch1/mywork.html
+++ b/ch1/mywork.html
@@ -74,9 +74,9 @@
               <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/PHD"><img style="vertical-align: middle;" src="../images/user_phd.png" title="排序網路及相關演算法之研究" width="32" height="32" /> 排序網路及相關演算法之研究</a><br>
           </div><!--close content_container-->
 
-          <div class="content_container">
+<!--          <div class="content_container">
             <a href="http://jonathan2251.github.io/wr/myoldwork.html"><img style="vertical-align: middle;" src="../images/Programming-Cpp-icon.png" title="其他舊作" width="32" height="32" /> 其他舊作</a><br>
-          </div><!--close content_container-->
+          </div>--><!--close content_container-->
 
           <div class="content_container">   
             <form name="jksearch" action="http://www.google.com/search" method="get" onSubmit="jksitesearch(this)">
