--- a/en/mywork.html
+++ b/en/mywork.html
@@ -76,9 +76,9 @@
               <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/PHD"><img style="vertical-align: middle;" src="../images/user_phd.png" title="The Researches of Sorting Network and Related Algorithm" width="32" height="32" /> The Researches of Sorting Network and Related Algorithm</a><br>
           </div><!--close content_container-->
 
-          <div class="content_container">
+<!--          <div class="content_container">
             <a href="http://jonathan2251.github.io/wr/myoldwork.html"><img style="vertical-align: middle;" src="../images/Programming-Cpp-icon.png" title="Other old works" width="32" height="32" /> Other old works</a><br>
-          </div><!--close content_container-->
+          </div>--><!--close content_container-->
 
           <div class="content_container">   
             <form name="jksearch" action="http://www.google.com/search" method="get" onSubmit="jksitesearch(this)">
