--- a/en/more.html
+++ b/en/more.html
@@ -66,7 +66,7 @@
               <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="../images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a> <br> <br>
           </div><!--close content_container-->
       
-          <h3>Resume:</h3>
+          <h3>CV (Detail Resume):</h3>
             <a href="http://jonathan2251.github.io/wr/detailresume.html"><img style="vertical-align: middle;" src="../images/html-icon-detail.png" title="Detail Resume(html)" width="32" height="32" /> http://jonathan2251.github.io/wr/detailresume.html</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="http://jonathan2251.github.io/wr/detailresume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Adobe-PDF-Reader-Book-icon.png" title="Detail Resume(pdf)" width="32" height="32" /> http://jonathan2251.github.io/wr/detailresume_cschen.pdf</a>&nbsp;&nbsp;&nbsp;&nbsp; <br> <br>
 
