--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -120,7 +120,7 @@ canvas {
 			</div>
 			
 			<div class="sectionContent">
-                <img src="../images/resume_experiences.png" alt="Mountain View" style="width:300px;height:200px;">
+                <img src="../images/resume_experiences.png" alt="Experiences" style="width:300px;height:200px;">
 			</div>
 			<div class="clear"></div>
 		</section>
