--- a/en/more.html
+++ b/en/more.html
@@ -68,14 +68,14 @@
       
           <div class="content_container">
             <h3>Resume:</h3>
-              <a href="http://jonathan2251.github.io/ws/resume_cschen.html"><img style="vertical-align: middle;" src="../images/html-icon-brief.png" title="Resume(html)" width="32" height="32" /> http://jonathan2251.github.io/ws/resume_cschen.html</a><br>
-              <a href="http://jonathan2251.github.io/ws/resume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Mimetypes-application-pdf-icon.png" title="Resume(pdf)" width="32" height="32" /> http://jonathan2251.github.io/ws/resume_cschen.pdf</a>
+              <a href="http://jonathan2251.github.io/ws/en/resume_cschen.html"><img style="vertical-align: middle;" src="../images/html-icon-brief.png" title="Resume(html)" width="32" height="32" /> http://jonathan2251.github.io/ws/en/resume_cschen.html</a><br>
+              <a href="http://jonathan2251.github.io/ws/en/resume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Mimetypes-application-pdf-icon.png" title="Resume(pdf)" width="32" height="32" /> http://jonathan2251.github.io/ws/en/resume_cschen.pdf</a>
           </div><!--close content_container-->
 
           <div class="content_container">
             <h3>CV (Detail Resume):</h3>
-              <a href="http://jonathan2251.github.io/ws/cv_cschen.html"><img style="vertical-align: middle;" src="../images/html-icon-detail.png" title="CV(detail resume)(html)" width="32" height="32" /> http://jonathan2251.github.io/ws/cv_cschen.html</a><br>
-              <a href="http://jonathan2251.github.io/ws/cv_cschen.pdf"><img style="vertical-align: middle;" src="../images/Adobe-PDF-Reader-Book-icon.png" title="CV(detail resume)(html)" width="32" height="32" /> http://jonathan2251.github.io/ws/cv_cschen.pdf</a>
+              <a href="http://jonathan2251.github.io/ws/en/cv_cschen.html"><img style="vertical-align: middle;" src="../images/html-icon-detail.png" title="CV(detail resume)(html)" width="32" height="32" /> http://jonathan2251.github.io/ws/en/cv_cschen.html</a><br>
+              <a href="http://jonathan2251.github.io/ws/en/cv_cschen.pdf"><img style="vertical-align: middle;" src="../images/Adobe-PDF-Reader-Book-icon.png" title="CV(detail resume)(pdf)" width="32" height="32" /> http://jonathan2251.github.io/ws/en/cv_cschen.pdf</a>
           </div><!--close content_container-->
 
           <div class="content_container">
