--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -80,9 +80,8 @@ canvas {
 			</div>
 			
 			<div class="sectionContent">
-              <p>Tutorial: Create an LLVM Backend compiler &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> <br> </p>
-
-              <p>Tutorial: Create an LLVM Backend Toolchain &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> <br> </p>
+              <p>Tutorial: Create an LLVM Backend compiler &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
+              <p>Tutorial: Create an LLVM Backend Toolchain &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
 			</div>
 			<div class="clear"></div>
 		</section>
@@ -118,11 +117,11 @@ canvas {
 			<div class="sectionTitle">
 				<h1>EXPERIENCE</h1>
 			</div>
-			
-			<div class="sectionContent">
-                <img src="../images/resume_experiences.png" alt="Experiences" style="width:300px;height:200px;">
-			</div>
-			<div class="clear"></div>
+						
+            <div id="container"" style="solid #000000;">
+                <canvas id="canvas2" width="800" height="180"></canvas>
+            </div>
+            <script> drawExperiences(); </script>
 		</section>
 		
 		<section>
