--- a/working/resume_cschen.html
+++ b/working/resume_cschen.html
@@ -19,11 +19,6 @@ canvas {
     -webkit-user-select: none;
     -ms-user-select: none;
 }
-canvas2 {
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-}
 </style>
 
 <!--[if lt IE 9]>
@@ -46,7 +41,6 @@ canvas2 {
                     program to deliver readable and maintainable software.</p>
 			</ul>
 		</div>
-		<div class="clear"></div>
 				<div class="title">
 					<h1>RESUME</h1>
 				</div>
@@ -63,7 +57,6 @@ canvas2 {
 					<p>Over 20 years experience in c/c++ embedded system programming, well knowledge in software development and debugging.</p>
 				</div>
 			</article>
-			<div class="clear"></div>
 		</section>
 		
 		
@@ -76,7 +69,6 @@ canvas2 {
             <script> drawSkillBarChart(); </script>
     
 			</div>
-			<div class="clear"></div>
 		</section>
 		
 		<section>
@@ -85,10 +77,9 @@ canvas2 {
 			</div>
 			
 			<div class="sectionContent">
-              <p>  Tutorial: Create an LLVM Backend compiler &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a></p>
+              <p>  Tutorial: Create an LLVM Backend compiler &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a></p>
               <p>  Tutorial: Create an LLVM Backend Toolchain &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a></p>
 			</div>
-			<div class="clear"></div>
 		</section>
 
 		<section>
@@ -102,7 +93,6 @@ canvas2 {
 					<p>1991-1994 B.S., June 1994, National Taiwan Technology University of Science and Technology, Taipei, Major: Industry Engineer.</p>
 				</article>
 			</div>
-			<div class="clear"></div>
 		</section>
 		
 		<section>
@@ -115,7 +105,6 @@ canvas2 {
 					<p>Taiwan National Computer Engineer license, 1995 高考資訊技師及格.</p>
 				</article>
 			</div>
-			<div class="clear"></div>
 		</section>
 		
 		<section>
@@ -123,33 +112,9 @@ canvas2 {
 				<h1>EXPERIENCE</h1>
 			</div>
 			
-            <div id="container"" style="solid #000000;">
-                <canvas id="canvas2" width="800" height="180"></canvas>
-            </div>
-            <script> drawExperiences(); </script>
-			<div class="clear"></div>
-
-		<section>
-			<div class="sectionTitle">
-				<h1>THESIS OF MASTER DEGREE</h1>
-			</div>
-			
 			<div class="sectionContent">
-              <p><a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="../images/user_phd.png" title="The Researches of Column Sort and Related Problems" width="16" height="16" /> The Researches of Column Sort and Related Problems</a></p>
+                <img src="../images/resume_experiences.png" alt="Experiences" style="width:300px;height:180px;">
 			</div>
-			<div class="clear"></div>
-		</section>
-		
-		<section>
-			<div class="sectionTitle">
-				<h1>PROPOSAL OF PHD STUDY</h1>
-			</div>
-			
-			<div class="sectionContent">
-              <p><a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/PHD"><img style="vertical-align: middle;" src="../images/user_phd.png" title="The Researches of Sorting Network and Related Algorithm" width="16" height="16" /> The Researches of Sorting Network and Related Algorithm</a></p>
-			</div>
-			<div class="clear"></div>
-		</section>
 		</section>
 	</div>
 </div>
