--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -156,14 +156,15 @@ canvas {
 			
 			<div class="sectionContent">
 				<article>
-					<p>Introduced polly for Marvell llvm toolchain optimization. Polly is a software for loop optimization.</p>
-                       <p style="margin-left:25px;">The advantage was that it might be 500% speed up in some numerical
+					<li><p>Introduced polly for Marvell llvm toolchain optimization. Polly is a software for loop optimization.</p></li>
+                       <li><p style="margin-left:25px;">The advantage was that it might be 500% speed up in some numerical
                        application program, such as matrix multiplication, or other kind of matrix
                        operation. Though Marvell's CPUs were not used in numerical applications.
-                       </p>
-					<p>I applied compiler code generation concept to propose this solution and Csim team adopted it.</p>
-					<p>I completed cmake and adjusted python programs to build Csim instead of make.</p>
-					<p>Report the better solution for cmake writting and performance compare with ninja.</p>
+                       </p></li>
+					<li><p>I applied compiler code generation concept to propose this solution and Csim team adopted it.</p></li>
+					<li><p>I completed cmake and adjusted python programs to build Csim instead of make.</p></li>
+					<li><p>Report the better solution for cmake writting.</p></li>
+					<li><p>Report performance compare for cmake and ninja.</p></li>
 				</article>
 			</div>
 
@@ -175,11 +176,11 @@ canvas {
 			
 			<div class="sectionContent">
 				<article>
-					<p>Designed QIP7kP1 and P2 board level testing code. Over 500 millions units of QIP7k model of Set Top Box was tested with this code on production line, as well as shipping to market. Other major products DCX33, DCX34 and DCX35 (over 1000 millions of box) were porting from QIP7kP1 & QIP7kP2.</p>
-					<p>Combined mips cpu and software engineer knowledge to create a frame work for board level testing code as manager request.</p>
-                       <p style="margin-left:25px;">I used Rational Ross UML tool to design the frame work. In this task. I applied object oriented analysis & program (OOA, OOP, design pattern) knowledge and UML tool skill.</p>
-					<p>Implemented the I/O redirection mechanism to make the new version of code porting task easier. One of my colleague adopted this mechanism by his will.</p>
-					<p>Implemented Board Level Test with design pattern </p>
+					<li><p>Designed QIP7kP1 and P2 board level testing code. Over 500 millions units of QIP7k model of Set Top Box was tested with this code on production line, as well as shipping to market. Other major products DCX33, DCX34 and DCX35 (over 1000 millions of box) were porting from QIP7kP1 & QIP7kP2.</p></li>
+					<li><p>Combined mips cpu and software engineer knowledge to create a frame work for board level testing code as manager request.</p></li>
+                       <li><p style="margin-left:25px;">I used Rational Ross UML tool to design the frame work. In this task. I applied object oriented analysis & program (OOA, OOP, design pattern) knowledge and UML tool skill.</p></li>
+					<li><p>Implemented the I/O redirection mechanism to make the new version of code porting task easier. One of my colleague adopted this mechanism by his will.</p></li>
+					<li><p>Implemented Board Level Test with design pattern </p></li>
 				</article>
 			</div>
 
@@ -196,12 +197,12 @@ canvas {
 			
 			<div class="sectionContent">
 				<article>
-					<p>Studied books “Computer Organization and Design: The Hardware/Software Interface” and “Computer Architecture – A Quantitative Approach” and Mips CPU user manual. Verilog language/tool study.</p>
-					<p>Apply in work:</p>
-					   <p style="margin-left:25px;">Finding the compiler bug of Code Warrior compiler for Mips cpu. The bug came from #pack(1) statement code generation.</p>
-					     <p style="margin-left:25px;">I emailed the bug along with example code to Code Warrior and it admited that this was a bug of their compiler for mips backend.</p>
-					<p>Implemented the mini process mechanism with mips assembly language to solve the program hang problem. After this implementation, the code was running more stable and fast. It was a serious problem since when one test item hang on, the other test items scheduled after that wouldn’t be run. In this situation, operator had no idea of the test result since test result was displayed after all test items executed. I implemented a mechanism (hundred lines of mips assembly) to jump out from the test item (by restore the stack and cpu registers status).</p>
-					<p>Applied Verilog and book “Computer Architecture” knowledge to change Cpu0 verilog code to fit my llvm backend compiler design.</p>
+					<li><p>Studied books “Computer Organization and Design: The Hardware/Software Interface” and “Computer Architecture – A Quantitative Approach” and Mips CPU user manual. Verilog language/tool study.</p></li>
+					<li><p>Apply in work:</p></li>
+					   <li><p style="margin-left:25px;">Finding the compiler bug of Code Warrior compiler for Mips cpu. The bug came from #pack(1) statement code generation.</p></li>
+					     <li><p style="margin-left:25px;">I emailed the bug along with example code to Code Warrior and it admited that this was a bug of their compiler for mips backend.</p></li>
+					<li><p>Implemented the mini process mechanism with mips assembly language to solve the program hang problem. After this implementation, the code was running more stable and fast. It was a serious problem since when one test item hang on, the other test items scheduled after that wouldn’t be run. In this situation, operator had no idea of the test result since test result was displayed after all test items executed. I implemented a mechanism (hundred lines of mips assembly) to jump out from the test item (by restore the stack and cpu registers status).</p></li>
+					<li><p>Applied Verilog and book “Computer Architecture” knowledge to change Cpu0 verilog code to fit my llvm backend compiler design.</p></li>
 				</article>
 			</div>
 
@@ -213,10 +214,10 @@ canvas {
 			
 			<div class="sectionContent">
 				<article>
-					<p>Studied llvm front & backend design. Studied book “Compilers – Principles, Techniques, & tools 2nd Aho,...” and yacc and lex tool.</p>
-					<p>Apply in work:</p>
-                       <p style="margin-left:25px;">I implemented the Cpu0 llvm compiler backend started from scratch for tutorial purpose, and writing books as in my publish books. A lot of readers have been asking me questions and I answering them out of working time.</p>
-					<p>Applied the compiler syntax parsing tool, yacc & lex, in test station design (specify test items for each station in script language I defined).</p>
+					<li><p>Studied llvm front & backend design. Studied book “Compilers – Principles, Techniques, & tools 2nd Aho,...” and yacc and lex tool.</p></li>
+					<li><p>Apply in work:</p></li>
+                       <li><p style="margin-left:25px;">I implemented the Cpu0 llvm compiler backend started from scratch for tutorial purpose, and writing books as in my publish books. A lot of readers have been asking me questions and I answering them out of working time.</p></li>
+					<li><p>Applied the compiler syntax parsing tool, yacc & lex, in test station design (specify test items for each station in script language I defined).</p></li>
 				</article>
 			</div>
 
@@ -226,9 +227,9 @@ canvas {
 			
 			<div class="sectionContent">
 				<article>
-					<p>Study book “Linux Device Driver (2nd & 3rd edition)”</p>
-					<p>Apply in work:</p>
-                       <p style="margin-left:25px;">Implemented the mini process mechanism as mentioned in above section "CPU architecture study".</p>
+					<li><p>Study book “Linux Device Driver (2nd & 3rd edition)”</p></li>
+					<li><p>Apply in work:</p></li>
+                       <li><p style="margin-left:25px;">Implemented the mini process mechanism as mentioned in above section "CPU architecture study".</p></li>
 				</article>
 			</div>
 			<div class="clear"></div>
