add unordered list

--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -200,9 +200,10 @@ canvas {
 					<li><p>Studied books “Computer Organization and Design: The Hardware/Software Interface” and “Computer Architecture – A Quantitative Approach” and Mips CPU user manual. Verilog language/tool study.</p></li>
 					<li><p>Apply in work:</p></li>
 					   <li><p style="margin-left:25px;">Finding the compiler bug of Code Warrior compiler for Mips cpu. The bug came from #pack(1) statement code generation.</p></li>
-					     <li><p style="margin-left:25px;">I emailed the bug along with example code to Code Warrior and it admited that this was a bug of their compiler for mips backend.</p></li>
-					<li><p>Implemented the mini process mechanism with mips assembly language to solve the program hang problem. After this implementation, the code was running more stable and fast. It was a serious problem since when one test item hang on, the other test items scheduled after that wouldn’t be run. In this situation, operator had no idea of the test result since test result was displayed after all test items executed. I implemented a mechanism (hundred lines of mips assembly) to jump out from the test item (by restore the stack and cpu registers status).</p></li>
-					<li><p>Applied Verilog and book “Computer Architecture” knowledge to change Cpu0 verilog code to fit my llvm backend compiler design.</p></li>
+					      <li><p style="margin-left:50px;">I emailed the bug along with example code to Code Warrior and it admited that this was a bug of their compiler for mips backend.</p></li>
+					   <li><p style="margin-left:25px;">Implemented the mini process mechanism with mips assembly language to solve the program hang problem.</p></li>
+					      <li><p style="margin-left:50px;">After this implementation, the code was running more stable and fast. It was a serious problem since when one test item hang on, the other test items scheduled after that wouldn’t be run. In this situation, operator had no idea of the test result since test result was displayed after all test items executed. I implemented a mechanism (hundred lines of mips assembly) to jump out from the test item (by restore the stack and cpu registers status).</p></li>
+					   <li><p style="margin-left:25px;">Applied Verilog and book “Computer Architecture” knowledge to change Cpu0 verilog code to fit my llvm backend compiler design.</p></li>
 				</article>
 			</div>
 
