add Reference in resume

--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -148,6 +148,17 @@ canvas {
 		
 		<section>
 			<div class="sectionTitle">
+				<h1>WORK OF MASTER DEGREE</h1>
+			</div>
+			
+			<div class="sectionContent">
+              <p><a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG"> Jpeg decoder</a></p>
+			</div>
+			<div class="clear"></div>
+		</section>
+
+		<section>
+			<div class="sectionTitle">
 				<h1>ACHIEVEMENT</h1>
 			</div>
 			<div class="sectionTitle">
@@ -232,6 +243,17 @@ canvas {
 					<li><p>Apply in work:</p></li>
                        <li><p style="margin-left:25px;">Implemented the mini process mechanism as mentioned in above section "CPU architecture study".</p></li>
 				</article>
+			</div>
+			<div class="clear"></div>
+		</section>
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Reference</h1>
+			</div>
+			
+			<div class="sectionContent">
+              <p><a href="https://jonathan2251.github.io/wr/RecommendationLetter_Marvell_ChenDavid_Singature.pdf"> My former manager's recommendation letter</a></p>
 			</div>
 			<div class="clear"></div>
 		</section>
