--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -150,6 +150,16 @@ canvas2 {
 			</div>
 			<div class="clear"></div>
 		</section>
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Reference</h1>
+			</div>
+			
+			<div class="sectionContent">
+              <p><a href="https://jonathan2251.github.io/wr/RecommendationLetter_Marvell_ChenDavid_Singature.pdf"> My former manager's recommendation letter: https://jonathan2251.github.io/wr/RecommendationLetter_Marvell_ChenDavid_Singature.pdf</a></p>
+			</div>
+			<div class="clear"></div>
 		</section>
 	</div>
 </div>
