--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -37,8 +37,8 @@ canvas {
 				<p>Chung-Shu Chen 陳鍾樞 (03)6681193, 0970577923 <a href="mailto:gamma_chen@yahoo.com.tw" target="_blank"> gamma_chen@yahoo.com.tw</a><br></p>
                 <p>I am an experienced programmer who used many different computer languages, tools and computer 
                     related knowledge to develop products of Set Top Box, CPU, compiler, simulator, ..., in my career. 
-                    In addition, I know tools and software engineering method very well and write good document for my 
-                    program to deliver readable and maintainable software.</p>
+                    In addition, I always have full passion in programming, knowing tools and software engineering method 
+                    very well and write good document to deliver readable and maintainable software.</p>
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -152,7 +152,7 @@ canvas {
 			</div>
 			
 			<div class="sectionContent">
-              <p><a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG"> Jpeg decoder</a></p>
+              <p><a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG"> Took course "Image processing" and programmed Jpeg decoder</a></p>
 			</div>
 			<div class="clear"></div>
 		</section>
@@ -253,7 +253,7 @@ canvas {
 			</div>
 			
 			<div class="sectionContent">
-              <p><a href="https://jonathan2251.github.io/wr/RecommendationLetter_Marvell_ChenDavid_Singature.pdf"> My former manager's recommendation letter</a></p>
+              <p><a href="https://jonathan2251.github.io/wr/RecommendationLetter_Marvell_ChenDavid_Singature.pdf"> My former manager's recommendation letter: https://jonathan2251.github.io/wr/RecommendationLetter_Marvell_ChenDavid_Singature.pdf</a></p>
 			</div>
 			<div class="clear"></div>
 		</section>
