--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -42,8 +42,8 @@ canvas2 {
 				<p>Chung-Shu Chen 陳鍾樞 (03)6681193, 0970577923 <a href="mailto:gamma_chen@yahoo.com.tw" target="_blank"> gamma_chen@yahoo.com.tw</a><br></p>
                 <p>I am an experienced programmer who used many different computer languages, tools and computer 
                     related knowledge to develop products of Set Top Box, CPU, compiler, simulator, ..., in my career. 
-                    In addition, I know tools and software engineering method very well and write good document for my 
-                    program to deliver readable and maintainable software.</p>
+                    In addition, I always have full passion in programming, knowing tools and software engineering method 
+                    very well and write good document to deliver readable and maintainable software.</p>
 			</ul>
 		</div>
 		<div class="clear"></div>
