--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -98,8 +98,8 @@ canvas2 {
 			
 			<div class="sectionContent">
 				<article>
-					<p>1997-1999 Master, June 1999, National Taiwan Normal University, Taipei, Major: Computer Science.</p>
-					<p>1991-1994 B.S., June 1994, National Taiwan Technology University of Science and Technology, Taipei, Major: Industry Engineer.</p>
+					<p>1997-1999 Master, June 1999, National Taiwan Normal University (國立台灣師範大學), Taipei, Major: Information Science.</p>
+					<p>1991-1994 B.S., June 1994, National Taiwan Technology University of Science and Technology (國立台灣科技大學), Taipei, Major: Industry Engineer.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
@@ -124,7 +124,7 @@ canvas2 {
 			</div>
 			
             <div id="container"" style="solid #000000;">
-                <canvas id="canvas2" width="800" height="180"></canvas>
+                <canvas id="canvas2" width="800" height="200"></canvas>
             </div>
             <script> drawExperiences(); </script>
 			<div class="clear"></div>
