--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -200,7 +200,7 @@ canvas {
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>CPU, COMPILER, AND OS RELATED EXPERIENCES</h1>
+				<h1>CPU, COMPILER, OS, AND SOFTWARE ENGINEERING RELATED EXPERIENCES</h1>
 			</div>
 			<div class="sectionTitle">
 				<h1>CPU architecture study</h1>
@@ -226,7 +226,7 @@ canvas {
 			
 			<div class="sectionContent">
 				<article>
-					<li><p>Studied llvm front & backend design. Studied book “Compilers – Principles, Techniques, & tools 2nd Aho,...” and yacc and lex tool.</p></li>
+					<li><p>Studied llvm front & backend design. Studied book “Compilers – Principles, Techniques, & tools 2nd Aho,...”, yacc and lex tool.</p></li>
 					<li><p>Apply in work:</p></li>
                        <li><p style="margin-left:25px;">Implement the Cpu0 llvm compiler backend from scratch for tutorial purpose, and writing books as in my publish books. A lot of readers have been asking me questions and I answering them out of working time.</p></li>
 					<li><p>Apply the compiler syntax parsing tool, yacc & lex, in test station design (specify test items for each station in script language I defined).</p></li>
@@ -242,6 +242,20 @@ canvas {
 					<li><p>Study book “Linux Device Driver (2nd & 3rd edition)”</p></li>
 					<li><p>Apply in work:</p></li>
                        <li><p style="margin-left:25px;">Implement the mini process mechanism as mentioned in above section "CPU architecture study".</p></li>
+				</article>
+			</div>
+			<div class="clear"></div>
+			
+			<div class="sectionTitle">
+				<h1>Software Engineering study:</h1>
+			</div>
+
+			<div class="sectionContent">
+				<article>
+					<li><p>Study book “Design Patterns” and "OOA Analysis related books and tools (Rational Rose, ...)"</p></li>
+					<li><p>Apply in work:</p></li>
+                       <li><p style="margin-left:25px;">Lead the Board Level Test Code framework project in Motorola, implement the framework with 4 other members.</p></li>
+					      <li><p style="margin-left:50px;"> Utilize four patterns in "design pattern" and Rational Ross tool to create framework, document and generate code.</p></li>
 				</article>
 			</div>
 			<div class="clear"></div>
